Fixed alignment issue for Guest section

--- a/wp-content/themes/mp-wp-legacy-2025-09-08/assets/css/prod.css
+++ b/wp-content/themes/mp-wp-legacy-2025-09-08/assets/css/prod.css
@@ -667,7 +667,6 @@ body.popup-open {
 }
 .guests__grid {
   display: flex;
-  align-items: flex-start;
   flex-wrap: wrap;
   margin: 0 -16px;
   row-gap: 32px;
@@ -699,6 +698,9 @@ body.popup-open {
   width: 100%;
   border-radius: 36px;
   border: 5px solid #FFF;
+  height: 100%;
+  object-fit: cover;
+  aspect-ratio: 1;
 }
 .guest-card__content {
   padding: 32px;
@@ -1370,11 +1372,6 @@ body.popup-open {
   .guest-card__image {
     line-height: 0;
   }
-  .guest-card__image img {
-    height: 100%;
-    object-fit: cover;
-    border-radius: 36px;
-  }
   .section {
     gap: 10px;
   }
@@ -1598,14 +1595,12 @@ body.popup-open {
     display: block;
     padding: 5px 0;
   }
-  .guests__grid {
-    align-items: flex-start;
-  }
   .guests__grid .guest-card {
     flex-direction: column;
   }
   .guests__grid .guest-card .guest-50-flex {
     width: 100%;
+    height: 100%;
   }
   .program-item {
     padding: 20px;
